--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,5 +1,13 @@
+wheel
 bs4
 flask
 python-dotenv
 nltk
 requests
+python3-pip
+python3-dev
+build-essential
+libssl-dev
+libffi-dev
+python3-setuptools
+gunicorn
