--- a/song-analyzer-frontend/package.json
+++ b/song-analyzer-frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/abeezee": "^4.4.5",
     "@fontsource/roboto": "^4.4.2",
     "@material-ui/core": "^4.11.4",
     "react": "^17.0.2",
