--- a/song-analyzer-frontend/package.json
+++ b/song-analyzer-frontend/package.json
@@ -6,6 +6,7 @@
     "@fontsource/abeezee": "^4.4.5",
     "@fontsource/roboto": "^4.4.2",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "0.9.5"
