Open gunicorn to all ports + add ssl packages for requirements

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,7 @@
 # Set base image (host OS)
 FROM python:3.8-alpine
 RUN apk add build-base
+RUN apk add gcc musl-dev python3-dev libffi-dev openssl-dev cargo
 # By default, listen on port 5000
 EXPOSE 8000/tcp
 
@@ -18,7 +19,7 @@ COPY app.py .
 ADD conf conf/
 COPY run-server.sh .
 COPY wsgi.py .
-
+ADD pickle pickle/
 
 # Specify the command to run on container start
 CMD [ "sh", "run-server.sh" ]
